// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <App/> Bottom Sheet Snapping (From Inbox) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Bottom Sheet Snapping (From Inbox): Bottom Sheet View Should Have Y-Axis 0 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "height": 1131,
      "position": "absolute",
      "width": 523,
      "zIndex": 1,
    }
  }
  testID="v-bottom-sheet"
>
  <View
    style={
      Object {
        "top": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Bottom Sheet Snapping (From Inbox): Bottom Sheet View Should Have Y-Axis Equal To Height 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "height": 1131,
      "position": "absolute",
      "width": 523,
      "zIndex": 1,
    }
  }
  testID="v-bottom-sheet"
>
  <View
    style={
      Object {
        "top": 1131,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Chat Height With Keyboard: Should Have Full Height 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#000000",
      "height": 1064,
    }
  }
  testID="v-chat"
/>
`;

exports[`Testing <App/> Chat Height With Keyboard: Should Have Height Minus Keyboard Height & Margin 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#000000",
      "height": 492,
    }
  }
  testID="v-chat"
/>
`;

exports[`Testing <App/> Chat Messages List Normal 1`] = `
<View
  data={
    Array [
      Object {
        "owner": "Mana",
        "text": "<3",
        "timestamp": 1999-10-09T09:01:00.000Z,
      },
      Object {
        "owner": "MikaTheCoolOne",
        "text": "Yay",
        "timestamp": 1999-10-09T09:00:00.000Z,
      },
    ]
  }
  inverted={true}
  keyExtractor={[Function]}
  renderItem={[Function]}
  testID="v-messages"
/>
`;

exports[`Testing <App/> Chat Messages List Normal: Should Be Message With Timestamp And Without A Background 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#818181",
        "fontSize": 14,
        "marginBottom": 10,
        "marginTop": 10,
        "textAlign": "center",
      }
    }
  >
    9 October 1999, 09:00 AM
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      Yay
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List Normal: Should Be Message Without Timestamp And With A Background 1`] = `
<View>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "backgroundColor": "#1C1C1C",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      &lt;3
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List Timestamps Formatting: Should Have A Timestamp of Full Date 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#818181",
        "fontSize": 14,
        "marginBottom": 10,
        "marginTop": 10,
        "textAlign": "center",
      }
    }
  >
    9 October 1999, 09:00 AM
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      Yay
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List Timestamps Formatting: Should Have A Timestamp of This Week 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#818181",
        "fontSize": 14,
        "marginBottom": 10,
        "marginTop": 10,
        "textAlign": "center",
      }
    }
  >
    Saturday, 12:00 AM
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      Yay
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List Timestamps Formatting: Should Have A Timestamp of Today 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#818181",
        "fontSize": 14,
        "marginBottom": 10,
        "marginTop": 10,
        "textAlign": "center",
      }
    }
  >
    Today, 12:00 AM
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      Yay
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List Timestamps Formatting: Should Have A Timestamp of Yesterday 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#818181",
        "fontSize": 14,
        "marginBottom": 10,
        "marginTop": 10,
        "textAlign": "center",
      }
    }
  >
    Yesterday, 12:00 AM
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      Yay
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List With Avatars: Should Be Message With Timestamp And Avatar And Without A Background 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#818181",
        "fontSize": 14,
        "marginBottom": 10,
        "marginTop": 10,
        "textAlign": "center",
      }
    }
  >
    9 October 1999, 09:00 AM
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "alignSelf": "flex-start",
          "borderRadius": 28,
          "height": 28,
          "marginLeft": 20,
          "width": 28,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 330.40000000000003,
        }
      }
    >
      Yay
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Chat Messages List With Avatars: Should Be Message Without Timestamp And With A Background 1`] = `
<View>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "backgroundColor": "#1C1C1C",
        "borderColor": "#1C1C1C",
        "borderRadius": 25,
        "borderWidth": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "maxWidth": 418.40000000000003,
        "minHeight": 40,
        "minWidth": 55,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255,255,255,0.8)",
          "fontSize": 16,
          "marginLeft": 20,
          "marginRight": 20,
          "maxWidth": 378.40000000000003,
        }
      }
    >
      &lt;3
    </Text>
  </View>
</View>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu 2`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Holder View Should Be Visible & Enabled 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Object {
      "backgroundColor": "#000000",
      "height": 1131,
      "opacity": 0.75,
      "position": "absolute",
      "width": 523,
      "zIndex": 2,
    }
  }
  testID="v-holder"
/>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Initial Holder View Should Be Hidden & Disabled 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Object {
      "backgroundColor": "#000000",
      "height": 1131,
      "opacity": 0,
      "position": "absolute",
      "width": 523,
      "zIndex": 2,
    }
  }
  testID="v-holder"
/>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Initial Menu View Should Be Hidden 1`] = `
<View
  style={
    Object {
      "height": 38,
      "minWidth": 38,
      "zIndex": 5,
    }
  }
  testID="v-menu"
>
  <View
    style={
      Object {
        "backgroundColor": "#414141",
        "borderRadius": 15,
        "height": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 15,
        "top": -5,
        "width": 246.5,
        "zIndex": 4,
      }
    }
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "marginRight": 20,
        "minWidth": 38,
        "zIndex": 5,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Menu View Should Be Visible 1`] = `
<View
  style={
    Object {
      "height": 38,
      "minWidth": 38,
      "zIndex": 5,
    }
  }
  testID="v-menu"
>
  <View
    style={
      Object {
        "backgroundColor": "#414141",
        "borderRadius": 15,
        "height": 735.15,
        "opacity": 1,
        "position": "absolute",
        "right": 15,
        "top": -5,
        "width": 493,
        "zIndex": 4,
      }
    }
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "marginRight": 20,
        "minWidth": 38,
        "zIndex": 5,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Navigation Views 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Navigation Views: Initial Navigation View Should Be Inbox 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="v-navigation"
>
  <View
    active={true}
    pointerEvents="box-none"
    style={
      Object {
        "height": "100%",
        "opacity": 1,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-inbox"
  />
  <View
    active={false}
    pointerEvents="none"
    style={
      Object {
        "height": "100%",
        "opacity": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-discover"
  />
</View>
`;

exports[`Testing <App/> Navigation Views: Navigation View Should Be Discover 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="v-navigation"
>
  <View
    active={false}
    pointerEvents="none"
    style={
      Object {
        "height": "100%",
        "opacity": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-inbox"
  />
  <View
    active={true}
    pointerEvents="box-none"
    style={
      Object {
        "height": "100%",
        "opacity": 1,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-discover"
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Activated Bottom Sheet) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Activated Bottom Sheet): Bottom Sheet Should Have Y-Axis Equal To Height 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "height": 1131,
      "position": "absolute",
      "width": 523,
      "zIndex": 1,
    }
  }
  testID="v-bottom-sheet"
>
  <View
    style={
      Object {
        "top": 1131,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Activated Bottom Sheet): Search Bar Should Be Maximize Width Max Width 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 410,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 410,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 348,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Activated Bottom Sheet): Search Bar Should Be Minimized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 38,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 38,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 0,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Deactivated Bottom Sheet) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Deactivated Bottom Sheet): Bottom Sheet Should Have Y-Axis 0 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "height": 1131,
      "position": "absolute",
      "width": 523,
      "zIndex": 1,
    }
  }
  testID="v-bottom-sheet"
>
  <View
    style={
      Object {
        "top": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Deactivated Bottom Sheet): Search Bar Should Be Maximize Width Default Width 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 429,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 429,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 367,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (2 Avatars) (With Deactivated Bottom Sheet): Search Bar Should Be Minimized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 38,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 38,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 0,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Activated Bottom Sheet) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Activated Bottom Sheet): Bottom Sheet Should Have Y-Axis Equal To Height 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "height": 1131,
      "position": "absolute",
      "width": 523,
      "zIndex": 1,
    }
  }
  testID="v-bottom-sheet"
>
  <View
    style={
      Object {
        "top": 1131,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Activated Bottom Sheet): Search Bar Should Be Maximize Width Max Width 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 391,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 391,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 329,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Activated Bottom Sheet): Search Bar Should Be Minimized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 38,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 38,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 0,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Deactivated Bottom Sheet) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Deactivated Bottom Sheet): Bottom Sheet Should Have Y-Axis 0 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "height": 1131,
      "position": "absolute",
      "width": 523,
      "zIndex": 1,
    }
  }
  testID="v-bottom-sheet"
>
  <View
    style={
      Object {
        "top": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Deactivated Bottom Sheet): Search Bar Should Be Maximize Width Default Width 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 429,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 429,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 367,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (3 Avatars) (With Deactivated Bottom Sheet): Search Bar Should Be Minimized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 38,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 38,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 0,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (No Bottom Sheet) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Search Bar Search Bar Width (No Bottom Sheet): Initial Search Bar Should Be Minimized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 38,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 38,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 0,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (No Bottom Sheet): Search Bar Should Be Maximized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 429,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 429,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 367,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <Inbox/> Group of 3 View: Should Be A Group View With 2 Avatars 1`] = `
<RCTScrollView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View>
        <View>
          <View />
        </View>
        <View />
        <View />
        <View />
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 20,
                "marginRight": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 70,
                  "marginLeft": 5,
                  "width": 70,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 54.5,
                    "justifyContent": "center",
                    "left": 18.375,
                    "position": "absolute",
                    "top": 26.25,
                    "width": 54.5,
                  }
                }
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 54.5,
                      "position": "absolute",
                      "width": 54.5,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 0,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": 54.5,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 54.5,
                  }
                }
              >
                <Image
                  source={2}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 54.5,
                      "position": "absolute",
                      "width": 54.5,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 1,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "marginLeft": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 22,
                    "fontWeight": "bold",
                  }
                }
              >
                Group of Wholesome Girls
              </Text>
              <Text
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 20,
                  }
                }
              >
                1 Feb 2001
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 22,
                    "marginTop": 10,
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Testing <Inbox/> Group of 4 View: Should Be A Group View With 3 Avatars 1`] = `
<RCTScrollView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View>
        <View>
          <View />
        </View>
        <View />
        <View />
        <View />
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 20,
                "marginRight": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 70,
                  "marginLeft": 5,
                  "width": 70,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 47.5,
                    "justifyContent": "center",
                    "left": 7.75,
                    "position": "absolute",
                    "top": 35.5,
                    "width": 47.5,
                  }
                }
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 47.5,
                      "position": "absolute",
                      "width": 47.5,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 0,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": 47.5,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 47.5,
                  }
                }
              >
                <Image
                  source={2}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 47.5,
                      "position": "absolute",
                      "width": 47.5,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 1,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": 47.5,
                    "justifyContent": "center",
                    "left": 30.5,
                    "position": "absolute",
                    "top": 10,
                    "width": 47.5,
                  }
                }
              >
                <Image
                  source={3}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 47.5,
                      "position": "absolute",
                      "width": 47.5,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 0,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "marginLeft": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 22,
                    "fontWeight": "bold",
                  }
                }
              >
                Group of Wholesome Girls
              </Text>
              <Text
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 20,
                  }
                }
              >
                2 Mar 2002
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 22,
                    "marginTop": 10,
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Testing <Inbox/> Group of 5 View: Should Be A Group View With 4 Avatars 1`] = `
<RCTScrollView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View>
        <View>
          <View />
        </View>
        <View />
        <View />
        <View />
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 20,
                "marginRight": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 70,
                  "marginLeft": 5,
                  "width": 70,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 37,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "top": 30,
                    "width": 37,
                  }
                }
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 37,
                      "position": "absolute",
                      "width": 37,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 0,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": 37,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 37,
                  }
                }
              >
                <Image
                  source={2}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 37,
                      "position": "absolute",
                      "width": 37,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 1,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": 37,
                    "justifyContent": "center",
                    "left": 30,
                    "position": "absolute",
                    "top": 40,
                    "width": 37,
                  }
                }
              >
                <Image
                  source={3}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 37,
                      "position": "absolute",
                      "width": 37,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 0,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": 37,
                    "justifyContent": "center",
                    "left": 30,
                    "position": "absolute",
                    "top": 8,
                    "width": 37,
                  }
                }
              >
                <Image
                  source={4}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 2,
                      "height": 37,
                      "position": "absolute",
                      "width": 37,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 0,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "marginLeft": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 22,
                    "fontWeight": "bold",
                  }
                }
              >
                Group of Wholesome Girls
              </Text>
              <Text
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 20,
                  }
                }
              >
                3 Apr 2003
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 22,
                    "marginTop": 10,
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Testing <Inbox/> Group of 6 View 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <Inbox/> Normal View: Should Be A Normal Inbox View With 1 Avatar 1`] = `
<RCTScrollView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View>
        <View>
          <View />
        </View>
        <View />
        <View />
        <View />
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 20,
                "marginRight": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 70,
                  "marginLeft": 5,
                  "width": 70,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 70,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 70,
                  }
                }
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "backgroundColor": "#4B4B4B",
                      "borderColor": "#000000",
                      "borderRadius": 70,
                      "borderWidth": 0,
                      "height": 70,
                      "position": "absolute",
                      "width": 70,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#000000",
                      "borderRadius": 23,
                      "borderWidth": 4,
                      "height": 23,
                      "marginLeft": -10,
                      "opacity": 1,
                      "position": "absolute",
                      "width": 23,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "marginLeft": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 22,
                    "fontWeight": "bold",
                  }
                }
              >
                Mika
              </Text>
              <Text
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 20,
                  }
                }
              >
                9 Oct 1999
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#818181",
                    "fontSize": 22,
                    "marginTop": 10,
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Testing <Inbox/> Timestamps Formatting: Should Have A Timestamp of Full Date 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View>
    <View>
      <View />
    </View>
    <View />
    <View />
    <View />
    <View
      style={
        Object {
          "marginBottom": 20,
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginLeft": 20,
            "marginRight": 20,
          }
        }
      >
        <View
          style={
            Object {
              "height": 70,
              "marginLeft": 5,
              "width": 70,
            }
          }
        >
          <View
            style={
              Object {
                "height": 70,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 70,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "backgroundColor": "#4B4B4B",
                  "borderColor": "#000000",
                  "borderRadius": 70,
                  "borderWidth": 0,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#000000",
                  "borderRadius": 23,
                  "borderWidth": 4,
                  "height": 23,
                  "marginLeft": -10,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 23,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 22,
                "fontWeight": "bold",
              }
            }
          >
            Mika
          </Text>
          <Text
            style={
              Object {
                "color": "#818181",
                "fontSize": 20,
              }
            }
          >
            9 Oct 1999
          </Text>
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#818181",
                "fontSize": 22,
                "marginTop": 10,
              }
            }
          >
            Yay
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing <Inbox/> Timestamps Formatting: Should Have A Timestamp of This Week 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View>
    <View>
      <View />
    </View>
    <View />
    <View />
    <View />
    <View
      style={
        Object {
          "marginBottom": 20,
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginLeft": 20,
            "marginRight": 20,
          }
        }
      >
        <View
          style={
            Object {
              "height": 70,
              "marginLeft": 5,
              "width": 70,
            }
          }
        >
          <View
            style={
              Object {
                "height": 70,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 70,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "backgroundColor": "#4B4B4B",
                  "borderColor": "#000000",
                  "borderRadius": 70,
                  "borderWidth": 0,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#000000",
                  "borderRadius": 23,
                  "borderWidth": 4,
                  "height": 23,
                  "marginLeft": -10,
                  "opacity": 0,
                  "position": "absolute",
                  "width": 23,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 22,
                "fontWeight": "bold",
              }
            }
          >
            Mika
          </Text>
          <Text
            style={
              Object {
                "color": "#818181",
                "fontSize": 20,
              }
            }
          >
            Saturday, 12:00 AM
          </Text>
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#818181",
                "fontSize": 22,
                "marginTop": 10,
              }
            }
          >
            Yay
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing <Inbox/> Timestamps Formatting: Should Have A Timestamp of Today 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View>
    <View>
      <View />
    </View>
    <View />
    <View />
    <View />
    <View
      style={
        Object {
          "marginBottom": 20,
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginLeft": 20,
            "marginRight": 20,
          }
        }
      >
        <View
          style={
            Object {
              "height": 70,
              "marginLeft": 5,
              "width": 70,
            }
          }
        >
          <View
            style={
              Object {
                "height": 70,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 70,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "backgroundColor": "#4B4B4B",
                  "borderColor": "#000000",
                  "borderRadius": 70,
                  "borderWidth": 0,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#000000",
                  "borderRadius": 23,
                  "borderWidth": 4,
                  "height": 23,
                  "marginLeft": -10,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 23,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 22,
                "fontWeight": "bold",
              }
            }
          >
            Mika
          </Text>
          <Text
            style={
              Object {
                "color": "#818181",
                "fontSize": 20,
              }
            }
          >
            Today, 12:00 AM
          </Text>
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#818181",
                "fontSize": 22,
                "marginTop": 10,
              }
            }
          >
            Yay
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing <Inbox/> Timestamps Formatting: Should Have A Timestamp of Yesterday 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View>
    <View>
      <View />
    </View>
    <View />
    <View />
    <View />
    <View
      style={
        Object {
          "marginBottom": 20,
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginLeft": 20,
            "marginRight": 20,
          }
        }
      >
        <View
          style={
            Object {
              "height": 70,
              "marginLeft": 5,
              "width": 70,
            }
          }
        >
          <View
            style={
              Object {
                "height": 70,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 70,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "backgroundColor": "#4B4B4B",
                  "borderColor": "#000000",
                  "borderRadius": 70,
                  "borderWidth": 0,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#000000",
                  "borderRadius": 23,
                  "borderWidth": 4,
                  "height": 23,
                  "marginLeft": -10,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 23,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 22,
                "fontWeight": "bold",
              }
            }
          >
            Mika
          </Text>
          <Text
            style={
              Object {
                "color": "#818181",
                "fontSize": 20,
              }
            }
          >
            Yesterday, 12:00 AM
          </Text>
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#818181",
                "fontSize": 22,
                "marginTop": 10,
              }
            }
          >
            Yay
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
